--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: 享受技术和编程带来的快乐
 author: 王超
 language: zh-Hans
 timezone:
-
+avatar: /uploads/avatar.png
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
